[package]
name = "can-live-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
can-config-rs = { git = "https://github.com/mu-zero-HYPERLOOP/can-config-rs.git" }
can-yaml-config-rs = { git ="https://github.com/mu-zero-HYPERLOOP/can-yaml-config-rs.git" }
git-download = "0.1.1"
reqwest = { version = "0.11.24", features = ["blocking"] }
